Fix image size calculation

Ever since it was implemented in 463213b8e04311f5c7f7c41e24cc198c5a98fb87,
the gmic_qt_get_image_size command never accounted for the selected
mode. Instead, the image's size was always returned, which made the
preview widget's calculations use wrong data.

This fix breaks QMic's ABI, so I am also adding a interface version
macro to help detection on the other side.

BUG: 453947

Fixes c-koi/gmic-qt#145