plugins/extensions/qmic/kis_qmic_interface.h
@@ -22,6 +22,8 @@
 class KisQmicApplicator;
 class KisViewManager;
 
+#define KRITA_QMIC_INTERFACE_VERSION 0x05010001
+
 struct KRITAQMICINTERFACE_EXPORT KisQMicImage {
     QMutex m_mutex;
     QString m_layerName;
@@ -67,7 +69,7 @@ public:
     KisImageInterface(KisViewManager *parent = nullptr);
     ~KisImageInterface() override;
 
-    QSize gmic_qt_get_image_size();
+    QSize gmic_qt_get_image_size(int mode);
     QVector<KisQMicImageSP> gmic_qt_get_cropped_images(int mode, QRectF &cropRect);
     void gmic_qt_output_images(int mode, QVector<KisQMicImageSP> layers);
     void gmic_qt_detach();
